<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/store">
    </ImageView>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_welcome"
        android:layout_below="@+id/logo"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16dp">

    </TextView>

    <EditText
        android:id="@+id/txtReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/product_reference"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtReference"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_cost"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCost"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_stock"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtIVA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/txtStock"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:visibility="gone">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginHorizontal="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_create">
            </Button>

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginHorizontal="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_search">
            </Button>

            <Button
                android:id="@+id/btnClean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginHorizontal="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_clean">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_update">
            </Button>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_delete">
            </Button>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>